--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <nav class="" id="nav">
       <div class="wrapper">
         <a class="logo" href="#home">
+          <!-- <img src="./assets/logo-blumis-white.svg" alt="" /> -->
           <h1>Blumis</h1>
         </a>
 
@@ -29,7 +30,7 @@
           <ul>
             <li><a onclick="closeMenu()" href="#home">Inicio</a></li>
             <li><a onclick="closeMenu()" href="#services">Produtos</a></li>
-            <li><a href="#">Sobre</a></li>
+            <li><a onclick="closeMenu()" href="#about" href="#">Sobre</a></li>
             <li><a href="#">Depoimentos</a></li>
           </ul>
 
@@ -168,46 +169,50 @@
         </button>
       </div>
     </nav>
-    <header id="home">
+    <section id="home">
       <div class="wrapper">
-        <h4>BEM VINDA À BLUMIS 👋</h4>
-        <h1>O lugar onde você vai encontrar elegância e modéstia.</h1>
+        <header>
+          <h4>BEM VINDA À BLUMIS 👋</h4>
+          <h1>O lugar onde você vai encontrar elegância e modéstia.</h1>
+        </header>
 
-        <p>
-          Os modelos da Blumis vão além dos que os olhos podem ver. Por que o
-          mais importante não só estar <strong>bem vestida</strong>, mas sim
-          estar <strong>bem consigo mesma</strong>.
-        </p>
+        <div class="content">
+          <p>
+            Os modelos da Blumis vão além dos que os olhos podem ver. Por que o
+            mais importante não só estar <strong>bem vestida</strong>, mas sim
+            estar <strong>bem consigo mesma</strong>.
+          </p>
 
-        <button>
-          <svg
-            width="20"
-            height="20"
-            viewBox="0 0 20 20"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M13.8337 11.6667C13.667 11.5833 12.5837 11.0833 12.417 11C12.2503 10.9167 12.0837 10.9167 11.917 11.0833C11.7503 11.25 11.417 11.75 11.2503 11.9167C11.167 12.0833 11.0003 12.0833 10.8337 12C10.2503 11.75 9.66699 11.4167 9.16699 11C8.75033 10.5833 8.33366 10.0833 8.00033 9.58334C7.91699 9.41668 8.00033 9.25001 8.08366 9.16668C8.16699 9.08334 8.25033 8.91668 8.41699 8.83334C8.50033 8.75001 8.58366 8.58334 8.58366 8.50001C8.66699 8.41668 8.66699 8.25001 8.58366 8.16668C8.50033 8.08334 8.08366 7.08334 7.91699 6.66668C7.83366 6.08334 7.66699 6.08334 7.50033 6.08334C7.41699 6.08334 7.25033 6.08334 7.08366 6.08334C6.91699 6.08334 6.66699 6.25001 6.58366 6.33334C6.08366 6.83334 5.83366 7.41668 5.83366 8.08334C5.91699 8.83334 6.16699 9.58334 6.66699 10.25C7.58366 11.5833 8.75033 12.6667 10.167 13.3333C10.5837 13.5 10.917 13.6667 11.3337 13.75C11.7503 13.9167 12.167 13.9167 12.667 13.8333C13.2503 13.75 13.7503 13.3333 14.0837 12.8333C14.2503 12.5 14.2503 12.1667 14.167 11.8333C14.167 11.8333 14.0003 11.75 13.8337 11.6667ZM15.917 4.08334C12.667 0.833344 7.41699 0.833344 4.16699 4.08334C1.50033 6.75001 1.00033 10.8333 2.83366 14.0833L1.66699 18.3333L6.08366 17.1667C7.33366 17.8333 8.66699 18.1667 10.0003 18.1667C14.5837 18.1667 18.2503 14.5 18.2503 9.91668C18.3337 7.75001 17.417 5.66668 15.917 4.08334ZM13.667 15.75C12.5837 16.4167 11.3337 16.8333 10.0003 16.8333C8.75033 16.8333 7.58366 16.5 6.50033 15.9167L6.25033 15.75L3.66699 16.4167L4.33366 13.9167L4.16699 13.6667C2.16699 10.3333 3.16699 6.16668 6.41699 4.08334C9.66699 2.00001 13.8337 3.08334 15.8337 6.25001C17.8337 9.50001 16.917 13.75 13.667 15.75Z"
-              fill="white"
-            />
-          </svg>
-          Comprar agora
-        </button>
+          <button>
+            <svg
+              width="20"
+              height="20"
+              viewBox="0 0 20 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M13.8337 11.6667C13.667 11.5833 12.5837 11.0833 12.417 11C12.2503 10.9167 12.0837 10.9167 11.917 11.0833C11.7503 11.25 11.417 11.75 11.2503 11.9167C11.167 12.0833 11.0003 12.0833 10.8337 12C10.2503 11.75 9.66699 11.4167 9.16699 11C8.75033 10.5833 8.33366 10.0833 8.00033 9.58334C7.91699 9.41668 8.00033 9.25001 8.08366 9.16668C8.16699 9.08334 8.25033 8.91668 8.41699 8.83334C8.50033 8.75001 8.58366 8.58334 8.58366 8.50001C8.66699 8.41668 8.66699 8.25001 8.58366 8.16668C8.50033 8.08334 8.08366 7.08334 7.91699 6.66668C7.83366 6.08334 7.66699 6.08334 7.50033 6.08334C7.41699 6.08334 7.25033 6.08334 7.08366 6.08334C6.91699 6.08334 6.66699 6.25001 6.58366 6.33334C6.08366 6.83334 5.83366 7.41668 5.83366 8.08334C5.91699 8.83334 6.16699 9.58334 6.66699 10.25C7.58366 11.5833 8.75033 12.6667 10.167 13.3333C10.5837 13.5 10.917 13.6667 11.3337 13.75C11.7503 13.9167 12.167 13.9167 12.667 13.8333C13.2503 13.75 13.7503 13.3333 14.0837 12.8333C14.2503 12.5 14.2503 12.1667 14.167 11.8333C14.167 11.8333 14.0003 11.75 13.8337 11.6667ZM15.917 4.08334C12.667 0.833344 7.41699 0.833344 4.16699 4.08334C1.50033 6.75001 1.00033 10.8333 2.83366 14.0833L1.66699 18.3333L6.08366 17.1667C7.33366 17.8333 8.66699 18.1667 10.0003 18.1667C14.5837 18.1667 18.2503 14.5 18.2503 9.91668C18.3337 7.75001 17.417 5.66668 15.917 4.08334ZM13.667 15.75C12.5837 16.4167 11.3337 16.8333 10.0003 16.8333C8.75033 16.8333 7.58366 16.5 6.50033 15.9167L6.25033 15.75L3.66699 16.4167L4.33366 13.9167L4.16699 13.6667C2.16699 10.3333 3.16699 6.16668 6.41699 4.08334C9.66699 2.00001 13.8337 3.08334 15.8337 6.25001C17.8337 9.50001 16.917 13.75 13.667 15.75Z"
+                fill="white"
+              />
+            </svg>
+            Comprar agora
+          </button>
 
-        <img
-          src="./assets/Banner-blumis.png"
-          alt="Mulher vestindo moletom verde e sorrindo"
-        />
+          <img
+            src="./assets/Banner-blumis.png"
+            alt="Mulher vestindo moletom verde e sorrindo"
+          />
+        </div>
 
         <div class="stats">
           <div class="stat">
-            <h3>Modestos</h3>
-            <p>Diversos modelos</p>
+            <h3>Modelos exclusivos</h3>
+            <p>Confecção própria</p>
           </div>
 
           <div class="stat">
-            <h3>P ao GG</h3>
+            <h3>P ao G1</h3>
             <p>Vários tamanhos Disponíveis</p>
           </div>
 
@@ -217,7 +222,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </section>
 
     <section id="services">
       <div class="wrapper">
@@ -226,87 +231,109 @@
           <h2>Como podemos ajudá-la encontrar o vestido ideal?</h2>
         </header>
 
-        <div class="cards">
-          <div class="card">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
-              <path
-                d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001"
-                stroke="hsl(328, 82%, 38%)"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
+        <div class="content">
+          <div class="cards">
+            <div class="card">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
+                <path
+                  d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001"
+                  stroke="hsl(328, 82%, 38%)"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
 
-            <h3>Variedade</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus ducimus
-              quasi eaque velit voluptatem nihil praesentium ipsum in iusto est
-              perferendis accusantium rem?
-            </p>
+              <h3>Variedade</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                libero facere, earum doloremque atque aspernatur, delectus
+                ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
+                iusto est perferendis accusantium rem?
+              </p>
+            </div>
+
+            <div class="card">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
+                <path
+                  d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001"
+                  stroke="hsl(328, 82%, 38%)"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+
+              <h3>Elegância</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                libero facere, earum doloremque atque aspernatur, delectus
+                ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
+                iusto est perferendis accusantium rem?
+              </p>
+            </div>
+
+            <div class="card">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
+                <path
+                  d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001"
+                  stroke="hsl(328, 82%, 38%)"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+
+              <h3>Qualidade</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                libero facere, earum doloremque atque aspernatur, delectus
+                ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
+                iusto est perferendis accusantium rem?
+              </p>
+            </div>
           </div>
+        </div>
+      </div>
+    </section>
 
-          <div class="card">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
-              <path
-                d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001"
-                stroke="hsl(328, 82%, 38%)"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
+    <section id="about">
+      <div class="wrapper">
+        <header>
+          <h4>Sobre a Blumis</h4>
+          <h2>Como surgiu a ideia</h2>
+        </header>
 
-            <h3>Variedade</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus ducimus
-              quasi eaque velit voluptatem nihil praesentium ipsum in iusto est
-              perferendis accusantium rem?
-            </p>
-          </div>
+        <div class="content">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perferendis ut ab dolore molestiae totam. Quod, deserunt suscipit
+            exercitationem, atque dignissimos porro sed ut, dicta voluptatem
+            minus delectus illo voluptatum cupiditate?
+          </p>
 
-          <div class="card">
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
-              <path
-                d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001"
-                stroke="hsl(328, 82%, 38%)"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-
-            <h3>Variedade</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus ducimus
-              quasi eaque velit voluptatem nihil praesentium ipsum in iusto est
-              perferendis accusantium rem?
-            </p>
-          </div>
+          <img src="./assets/sobre-a-blumis.jpg" alt="Sobre a Blumis" />
         </div>
       </div>
     </section>
