--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body onscroll="onScroll()">
+<body>
   <nav class="" id="nav">
     <div class="wrapper">
       <a class="logo" href="#home">
@@ -30,7 +30,7 @@
           <li><a href="#">Depoimentos</a></li>
         </ul>
 
-        <a class="button" href="#">Comprar agora</a>
+        <a class="button" onclick="closeMenu()" href="#contact">Comprar agora</a>
 
         <ul class="social-links">
           <li>
@@ -90,7 +90,7 @@
   <section id="home">
     <div class="wrapper">
       <header>
-        <h4>BEM VINDA À BLUMIS 👋</h4>
+        <h4>BEM-VINDA A BLUMIS 👋</h4>
         <h1>O lugar onde você vai encontrar elegância e modéstia.</h1>
       </header>
 
@@ -406,6 +406,14 @@
       </p>
     </div>
   </footer>
+
+  <a href="#home" id="backToTopButton">
+    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="20" cy="20" r="20" fill="hsl(328, 82%, 38%)" />
+      <path d="M20 27V13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      <path d="M13 20L20 13L27 20" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+    </svg>
+  </a>
 
   <!-- SCROLLREVEAL LIB -->
   <script src="https://unpkg.com/scrollreveal"></script>
