Adjust: edit structure html new class

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
           <li><a onclick="closeMenu()" href="#home">Inicio</a></li>
           <li><a onclick="closeMenu()" href="#services">Produtos</a></li>
           <li><a onclick="closeMenu()" href="#about" href="#">Sobre</a></li>
-          <li><a href="#">Depoimentos</a></li>
+          <li><a onclick="closeMenu()" href="#">Depoimentos</a></li>
+          <li><a onclick="closeMenu()" href="#contact">Contato</a></li>
         </ul>
 
-        <a class="button" onclick="closeMenu()" href="#contact">Comprar agora</a>
+        <a class="button" onclick="closeMenu()" href="https://wa.me/5511953579709">Comprar agora</a>
 
         <ul class="social-links">
           <li>
