Update: hero add br

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 
         <div class="content">
           <p>
-            Os modelos da Blumis vão além dos que os olhos podem ver. Por que o
+            Os modelos da Blumis vão além dos que os olhos podem ver. <br>
+            Por que o
             mais importante não só estar <strong>bem vestida</strong>, mas sim
             estar <strong>bem consigo mesma</strong>.
           </p>
