--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
     <div class="ism-slider" data-transition_type="fade" data-radio_type="thumbnail" id="my-Newslider">
       <ol>
         <li>
-          <img src="./assets/images/antonela-2.jpg">
+          <img src="./assets/images/antonela-2.jpg" alt="Vestido Blumis Antonela na cor azul">
           <!-- <div class="ism-caption ism-caption-0">Vestido Antonela</div> -->
         </li>
         <li>
-          <img src="./assets/images/antonela-1.png" alt="Vestido Blumis Antonela">
+          <img src="./assets/images/antonela-1.png" alt="Vestido Blumis Antonela na cor azul">
         </li>
         <li>
           <img src="./assets/images/marcela-preto.png" alt="Vestido Blumis Marcela cor preta">
