Update: Add sliders and adjusts css

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a onclick="closeMenu()" href="#home">Inicio</a></li>
           <li><a onclick="closeMenu()" href="#services">Razões</a></li>
           <li><a onclick="closeMenu()" href="#products">Produtos</a></li>
-          <li><a onclick="closeMenu()" href="#about" href="#">Sobre</a></li>
+          <li><a onclick="closeMenu()" href="#about">Sobre</a></li>
           <li><a onclick="closeMenu()" href="#testimonials">Depoimentos</a></li>
           <li><a onclick="closeMenu()" href="#contact">Contato</a></li>
         </ul>
@@ -290,20 +290,30 @@
     <div class="ism-slider" data-transition_type="fade" data-radio_type="thumbnail" id="my-Newslider">
       <ol>
         <li>
-          <img src="./assets/images/antonela-2.jpg" alt="Vestido Blumis Antonela na cor azul">
+          <img src="./assets/images/conjunto-sarah-blumis-01.png" alt="Conjunto Blumis Sarah na cor preta">
           <!-- <div class="ism-caption ism-caption-0">Vestido Antonela</div> -->
         </li>
+        <!-- <li>
+          <img src="./assets/images/conjunto-sarah-blumis-02.png"
+            alt="Conjunto Blumis Sarah na cor preta parte superior">
+        </li> -->
         <li>
-          <img src="./assets/images/antonela-1.png" alt="Vestido Blumis Antonela na cor azul">
+          <img src="./assets/images/saia-sara-blumis.png" alt="Saia Sarah Blumis cor preta">
         </li>
         <li>
-          <img src="./assets/images/marcela-preto.png" alt="Vestido Blumis Marcela cor preta">
+          <img src="./assets/images/conjunto-blumis-vermelho-e-branco.png"
+            alt="Conjunto Blumis Julia vermelho e branco">
         </li>
         <li>
-          <img src="./assets/images/marcela-verde.png" alt="Vestido Blumis Marcela cor verde">
+          <img src="./assets/images/conjunto-julia-blumis-04.png" alt="Conjunto Blumis Julia vermelho e branco">
         </li>
-        <li>
-          <img src="./assets/images/clarice-vestido.png" alt="Vestido Blumis Clarice cor preta">
+        <li><img src="./assets/images/vestido-antonella-vinho-blumis.png" alt="Vestido Blumis Antonella cor vinho"></li>
+        <li><img src="./assets/images/vestido-antonella-vinho-blumis-01.png" alt="Vestido Blumis Antonela vinho"></li>
+        <li><img src="./assets/images/vestido-antonela-azul-blumis.png" alt="Vestido Blumis Antonella azul"></li>
+        <li><img src="./assets/images/vestido-clarice-blumis-preto.png" alt="Vestido Blumis Clarice preto"></li>
+        <li><img src="./assets/images/vestido-clarice-blumis-01.png" alt="Vestido Blumis Clarice preto"></li>
+        <li><img src="./assets/images/vestido-marcela-vermelho-blumis.png" alt="Vestido Blumis Marcela vermelho"></li>
+        <li><img src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="Vestido Blumis Marcela vermelho">
         </li>
       </ol>
     </div>
@@ -595,7 +605,7 @@
 
 
       <div class="col-b">
-        <img src="./assets/images/dress.jpg" alt="mulher negra com vestido preto sorrindo">
+        <img src="./assets/images/vestido-marcela-preto-blumis.png" alt="mulher vestindo Blumis">
       </div>
 
 
