Content: Add content about and stats

--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
         </div>
 
         <div class="stat">
-          <h3>+10</h3>
-          <p>Anos no Mercado</p>
+          <!-- <h3>+10</h3> -->
+          <img src="./assets/icons/entrega-rapida2.svg" alt="" id="express">
+          <p>Entrega rápida</p>
         </div>
       </div>
     </div>
@@ -171,8 +172,8 @@
   <section id="services">
     <div class="wrapper">
       <header>
-        <h4>Ideal</h4>
-        <h2>Como podemos ajudá-la encontrar o vestido ideal?</h2>
+        <h4>Melhor escolha</h4>
+        <h2>Buscando o vestido ideal?</h2>
       </header>
 
       <div class="content">
@@ -186,10 +187,9 @@
 
             <h3>Variedade</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus
-              ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
-              iusto est perferendis accusantium rem?
+              Entre nossos modelos, escolha a cor e o estilo com o qual você mais se identifica. Entre os diversos
+              modelos Blumis você encontrará aquele que mais tem haver com o formato do seu corpo, sua altura e oque
+              mais lhe agrada.
             </p>
           </div>
 
@@ -202,10 +202,8 @@
 
             <h3>Elegância</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus
-              ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
-              iusto est perferendis accusantium rem?
+              Precisa de um vestido para uma ocasião fina ou "chick"? Temos modelos mais sofisticados que são leves e
+              que vão ajudar a realçar a sua beleza natural.
             </p>
           </div>
 
@@ -218,58 +216,9 @@
 
             <h3>Qualidade</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus
-              ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
-              iusto est perferendis accusantium rem?
-            </p>
-          </div>
-
-          <div class="card">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
-              <path d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001" stroke="hsl(328, 82%, 38%)" stroke-width="1.5"
-                stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-
-            <h3>Variedade</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus
-              ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
-              iusto est perferendis accusantium rem?
-            </p>
-          </div>
-
-          <div class="card">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
-              <path d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001" stroke="hsl(328, 82%, 38%)" stroke-width="1.5"
-                stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-
-            <h3>Elegância</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus
-              ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
-              iusto est perferendis accusantium rem?
-            </p>
-          </div>
-
-          <div class="card">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="12" cy="12" r="12" fill="hsl(333, 49%, 82%)" />
-              <path d="M17.091 8.18188L10.091 15.1819L6.90918 12.0001" stroke="hsl(328, 82%, 38%)" stroke-width="1.5"
-                stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-
-            <h3>Qualidade</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-              libero facere, earum doloremque atque aspernatur, delectus
-              ducimus quasi eaque velit voluptatem nihil praesentium ipsum in
-              iusto est perferendis accusantium rem?
+              Trabalhamos com tecidos de qualidade e que se são confortáveis de vestir. Lembre-se sempre de verificar
+              antes qual o tamanha ideal para o seu corpo. Todos nossos vestidos passam por um controle rigoroso de
+              qualidade para que você tenha sempre a melhor experiência da Blumis.
             </p>
           </div>
         </div>
@@ -320,9 +269,9 @@
 
     <div class="wrapper">
       <div class="content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi tenetur asperiores, exercitationem beatae rem
-          ratione laudantium aliquid nobis fugit excepturi officiis ea hic, deleniti, fuga repudiandae. Quae dicta
-          possimus odit.</p>
+        <p>Vestidos e conjuntos (blusa e saia), dos mais diversos <strong>estilos</strong> e <strong>cores</strong>.
+          Queremos entregar a você o melhor que a <strong>Blumis</strong> tem em sentido de elegância e diversidade de
+          estilo para que você possar 🥰 <strong>arrazar</strong> em qualquer ocasião.</p>
       </div>
     </div>
   </section>
@@ -338,10 +287,11 @@
 
         <div class="content">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Perferendis ut ab dolore molestiae totam. Quod, deserunt suscipit
-            exercitationem, atque dignissimos porro sed ut, dicta voluptatem
-            minus delectus illo voluptatum cupiditate?
+            Nosso sonho sempre foi ajudar outras mulheres a sentirem-se valorizadas e bem com si mesmo. Sabemos que isso
+            tem muito haver com a autoestima e o cuidado próprio. A partir dessa idéia, começamos a pensar: "Como ajudar
+            mulheres que estão na busca pelo autocuidado?". A <strong>Blumis</strong> surgiu a partir da inicitiva de
+            unir <strong>elegância</strong> , <strong>modéstia</strong> e <strong>preço acessível</strong> , como uma
+            forma de levar a cada mulher a oportunidade de sentir-se bem vestindo aquilo que lhe 🤍 faz bem.
           </p>
 
         </div>
@@ -587,7 +537,7 @@
                 </g>
               </svg>
 
-              <a href="#">@_blumis</a>
+              <a href="instagram.com/_blumis">@_blumis</a>
             </li>
           </ul>
 
@@ -605,7 +555,7 @@
 
 
       <div class="col-b">
-        <img src="./assets/images/vestido-marcela-preto-blumis.png" alt="mulher vestindo Blumis">
+        <img src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="mulher vestindo Blumis">
       </div>
 
 
@@ -624,7 +574,7 @@
       <div class="col-b">
         <ul class="social-links">
           <li>
-            <a href="#" target="_blank" aria-label="Icone do Facebook">
+            <a href="https://www.facebook.com/moda.blumis/" target="_blank" aria-label="Icone do Facebook">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M18 1.99997H15C13.6739 1.99997 12.4021 2.52675 11.4645 3.46444C10.5268 4.40212 10 5.67389 10 6.99997V9.99997H7V14H10V22H14V14H17L18 9.99997H14V6.99997C14 6.73475 14.1054 6.4804 14.2929 6.29286C14.4804 6.10533 14.7348 5.99997 15 5.99997H18V1.99997Z"
@@ -633,7 +583,7 @@
             </a>
           </li>
           <li>
-            <a href="#" target="_blank" aria-label="Icone do Instagram">
+            <a href="https://instagram.com/_blumis" target="_blank" aria-label="Icone do Instagram">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M17 1.99997H7C4.23858 1.99997 2 4.23855 2 6.99997V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V6.99997C22 4.23855 19.7614 1.99997 17 1.99997Z"
