Edit: add content and testimonials

--- a/index.html
+++ b/index.html
@@ -318,9 +318,8 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
+                  Minha flor muito obrigado pelo atendimento diferenciado que você me deu. Seus vestidos são lindos!
+                  Amei a minha escolha! Ficou perfeito! Já querendo mais um 😜🙈
                 </p>
 
                 <cite>
@@ -334,14 +333,13 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
+                  Eu tô apaixonada nele 😍 Se deixar só uso ele agora 😂 Todo mundo elogiou na reunião 💛💛 Tá tão
+                  cheiroso. Amei o tecido dele.
                 </p>
 
                 <cite>
                   <img src="https://randomuser.me/api/portraits/women/43.jpg" alt="Cliente Blumis satisfeita">
-                  Lucia Oliveira
+                  Mayara Gracek
                 </cite>
               </blockquote>
             </div>
@@ -350,9 +348,7 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
+                  São muito bonitos e veste bem, você tá de parabéns. Já tô me sentindo 😉
                 </p>
 
                 <cite>
@@ -366,9 +362,7 @@
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
+                  Sério, estou apaixonada por esses vestidos, estou muito ansiosa pra usar. Zero defeitos, só elogios ❤️
                 </p>
 
                 <cite>
@@ -384,14 +378,13 @@
                 </div>
                 <p>
                   <span>&ldquo;</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
+                  Amei o vestido. Caiu super bem e ele é leve, lindo! Eu amei mesmo! E olha que hoje está muito quente e
+                  me senti super confortável nele 🥰
                 </p>
 
                 <cite>
                   <img src="https://randomuser.me/api/portraits/women/71.jpg" alt="Cliente Blumis satisfeita">
-                  Camila dos Santos
+                  Vania Paiva
                 </cite>
               </blockquote>
             </div>
