Update: add readme.md

--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
       <div class="stats">
         <div class="stat">
           <h3>+20</h3>
-          <p>Confecção própria</p>
+          <p>Variações de modelos</p>
         </div>
 
         <div class="stat">
           <h3>P ao G1</h3>
-          <p>Vários tamanhos Disponíveis</p>
+          <p>Vários tamanhos disponíveis</p>
         </div>
 
         <div class="stat">
@@ -287,7 +287,8 @@
 
         <div class="content">
           <p>
-            Nosso sonho sempre foi ajudar outras mulheres a sentirem-se valorizadas e bem com si mesmo. Sabemos que isso
+            Nosso sonho sempre foi ajudar outras mulheres a sentirem-se valorizadas e bem com consigo mesmo. Sabemos que
+            isso
             tem muito haver com a autoestima e o cuidado próprio. A partir dessa idéia, começamos a pensar: "Como ajudar
             mulheres que estão na busca pelo autocuidado?". A <strong>Blumis</strong> surgiu a partir da inicitiva de
             unir <strong>elegância</strong> , <strong>modéstia</strong> e <strong>preço acessível</strong> , como uma
@@ -338,7 +339,8 @@
                 </p>
 
                 <cite>
-                  <img src="https://randomuser.me/api/portraits/women/43.jpg" alt="Cliente Blumis satisfeita">
+                  <img src="./assets/images/314650202_419823883694723_2841325854598355426_n.jpg"
+                    alt="Cliente Blumis satisfeita">
                   Mayara Gracek
                 </cite>
               </blockquote>
