Update: Compress images, adjust css width, heigth and filter brightess

--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="pt-BR">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script async>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-P9HQ65K');</script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6BN0TCY3W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-V6BN0TCY3W');
+  </script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -41,11 +61,15 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9HQ65K" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <nav class="" id="nav">
     <div class="wrapper">
       <a class="logo" href="#home">
         <!-- <img src="./assets/logo-blumis-white.svg" alt="" /> -->
-        <h1>Blumis</h1>
+        <h2>Blumis</h2>
       </a>
 
       <div class="menu">
@@ -121,13 +145,13 @@
 
       <div class="col-a">
         <header>
-          <h4>BEM-VINDA A BLUMIS 👋</h4>
-          <h1>O lugar onde você vai encontrar elegância e modéstia.</h1>
+          <h4>SEJA BEM-VINDA! 👋</h4>
+          <h1>Na Blumis você vai encontrar elegância e modéstia.</h1>
         </header>
 
         <div class="content">
           <p>
-            Os modelos da Blumis vão além dos que os olhos podem ver. <br>
+            Os modelos da Blumis vão além do que os olhos podem ver. <br>
             Por que o
             mais importante não só estar <strong>bem vestida</strong>, mas sim
             estar <strong>bem consigo mesma</strong>.
@@ -161,7 +185,7 @@
         </div>
 
         <div class="stat">
-          <img src="./assets/icons/entrega-rapida2.svg" alt="" id="express">
+          <img src="./assets/icons/entrega-rapida2.svg" alt="icone de entrega rápida" id="express">
           <p>Entrega rápida</p>
         </div>
       </div>
@@ -187,7 +211,7 @@
             <h3>Variedade</h3>
             <p>
               Entre nossos modelos, escolha a cor e o estilo com o qual você mais se identifica. Entre os diversos
-              modelos Blumis você encontrará aquele que mais tem haver com o formato do seu corpo, sua altura e oque
+              modelos Blumis, você encontrará aquele que mais tem haver com o formato do seu corpo, sua altura e oque
               mais lhe agrada.
             </p>
           </div>
@@ -215,9 +239,9 @@
 
             <h3>Qualidade</h3>
             <p>
-              Trabalhamos com tecidos de qualidade e que se são confortáveis de vestir. Lembre-se sempre de verificar
-              antes qual o tamanha ideal para o seu corpo. Todos nossos vestidos passam por um controle rigoroso de
-              qualidade para que você tenha sempre a melhor experiência da Blumis.
+              Trabalhamos com tecidos de qualidade e que são confortáveis de vestir. Lembre-se sempre de verificar
+              antes qual o tamanho ideal para o seu corpo. Todos os nossos vestidos passam por um controle rigoroso de
+              qualidade para que você tenha sempre a melhor experiência com a Blumis.
             </p>
           </div>
         </div>
@@ -269,8 +293,9 @@
     <div class="wrapper">
       <div class="content">
         <p>Vestidos e conjuntos (blusa e saia), dos mais diversos <strong>estilos</strong> e <strong>cores</strong>.
-          Queremos entregar a você o melhor que a <strong>Blumis</strong> tem em sentido de elegância e diversidade de
-          estilo para que você possar 🥰 <strong>arrazar</strong> em qualquer ocasião.</p>
+          Queremos entregar a você o melhor que a <strong>Blumis</strong> tem, no que se refere a elegância e
+          diversidade de
+          estilo, para que você possar 🥰 <strong>arrazar</strong> em qualquer ocasião.</p>
       </div>
     </div>
   </section>
@@ -291,14 +316,14 @@
             tem muito haver com a autoestima e o cuidado próprio. A partir dessa idéia, começamos a pensar: "Como ajudar
             mulheres que estão na busca pelo autocuidado?". A <strong>Blumis</strong> surgiu a partir da inicitiva de
             unir <strong>elegância</strong> , <strong>modéstia</strong> e <strong>preço acessível</strong> , como uma
-            forma de levar a cada mulher a oportunidade de sentir-se bem vestindo aquilo que lhe 🤍 faz bem.
+            forma de levar a cada mulher a oportunidade de sentir-se bem, vestindo aquilo que lhe 🤍 faz bem.
           </p>
 
         </div>
       </div>
 
       <div class="col-b">
-        <img src="./assets/images/sobre-a-blumis.jpg" alt="Sobre a Blumis" />
+        <img src="./assets/images/sobre-a-blumis.webp" alt="Sobre a Blumis imagem de tecido tesoura e alfinete" />
       </div>
 
     </div>
@@ -618,7 +643,7 @@
     </svg>
   </a>
 
-  <script src="./js/ism-min.js"></script>
+  <script src="./js/ism-min.js" defer></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- SCROLLREVEAL LIB -->
