Update: adjust input

--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
 
 <head>
 
+  <!-- Google Tag Manager -->
+  <script async>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-P9HQ65K');</script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6BN0TCY3W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-V6BN0TCY3W');
+  </script>
+
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -42,6 +63,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9HQ65K" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <nav class="" id="nav">
     <div class="wrapper">
@@ -583,17 +608,17 @@
               <p>Entraremos em contato o mais breve possível.</p>
             </header>
             <div class="inputBox">
-              <input type="text" name="name" required>
+              <input type="text" name="name" required autocomplete="off">
               <span>Seu Nome</span>
               <i></i>
             </div>
             <div class="inputBox">
-              <input type="email" name="email" required>
+              <input type="email" name="email" required autocomplete="off">
               <span>E-mail</span>
               <i></i>
             </div>
             <div class="inputBox">
-              <input type="text" name="text" required>
+              <input type="text" name="text" required autocomplete="off">
               <span>Mensagem</span>
               <i></i>
             </div>
