Adjust: add input textarea and styles

--- a/index.html
+++ b/index.html
@@ -613,13 +613,14 @@
               <i></i>
             </div>
             <div class="inputBox">
-              <input type="email" name="email" required autocomplete="off">
+              <input type="email" name="email" required>
               <span>E-mail</span>
               <i></i>
             </div>
             <div class="inputBox">
-              <input type="text" name="text" required autocomplete="off">
-              <span>Mensagem</span>
+              <textarea name="message" id="" cols="30" rows="5" required spellcheck="true"></textarea>
+              <!-- <input type="text" name="text" required autocomplete="off"> -->
+              <span>Descreva em poucas palavras o assunto</span>
               <i></i>
             </div>
             <button type="submit">Enviar</button>
