Adjust: zindex layer

--- a/index.html
+++ b/index.html
@@ -608,17 +608,18 @@
               <p>Entraremos em contato o mais breve possível.</p>
             </header>
             <div class="inputBox">
-              <input type="text" name="name" required autocomplete="off">
+              <input type="text" name="name" required autocomplete="off" aria-label="Nome">
               <span>Seu Nome</span>
               <i></i>
             </div>
             <div class="inputBox">
-              <input type="email" name="email" required>
+              <input type="email" name="email" required aria-label="E-mail">
               <span>E-mail</span>
               <i></i>
             </div>
             <div class="inputBox">
-              <textarea name="message" id="" cols="30" rows="5" required spellcheck="true"></textarea>
+              <textarea name="message" id="" cols="30" rows="5" required spellcheck="true"
+                aria-label="Mensagem de Texto"></textarea>
               <!-- <input type="text" name="text" required autocomplete="off"> -->
               <span>Descreva em poucas palavras o assunto</span>
               <i></i>
