Adjust: remove comments

--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
   <nav class="" id="nav">
     <div class="wrapper">
       <a class="logo" href="#home">
-        <!-- <img data-src="./assets/logo-blumis-white.svg" alt="" /> -->
         <h2>Blumis</h2>
       </a>
 
@@ -592,16 +591,15 @@
 
 
       <div class="col-b">
-        <!-- <img data-src="./assets/images/vestido-marcela-vermelho-blumis-01.png" alt="mulher vestindo Blumis"
-          class="lazyload"> -->
 
         <div class="box">
 
           <form action="https://formsubmit.co/981d569ab2c5c67bfec02f2ca7314597" method="POST">
-            <input type="hidden" name="_next" value="http://127.0.0.1:5502/trankyou.html">
+            <input type="hidden" name="_next" value="https:/blumis.com.br/novidades-blumis/trankyou.html">
             <input type="hidden" name="_subject" value="Nova Mensagem Site Blumis!">
             <input type="hidden" name="_captcha" value="true">
-            <input type="hidden" name="_autoresponse" value="sua mensagem personalizada">
+            <input type="hidden" name="_autoresponse"
+              value="Olá! Está é uma prévia da mensagem que nos encaminhou via formulário de contato Blumis">
             <input type="hidden" name="_template" value="table">
             <header>
               <h4>Preencha nosso formulário</h4>
@@ -620,7 +618,6 @@
             <div class="inputBox">
               <textarea name="message" id="" cols="30" rows="5" required spellcheck="true"
                 aria-label="Mensagem de Texto"></textarea>
-              <!-- <input type="text" name="text" required autocomplete="off"> -->
               <span>Descreva em poucas palavras o assunto</span>
               <i></i>
             </div>
