Bugfix: corrigido direcionamento form

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
         <div class="box">
 
           <form action="https://formsubmit.co/981d569ab2c5c67bfec02f2ca7314597" method="POST">
-            <input type="hidden" name="_next" value="https:/blumis.com.br/novidades-blumis/trankyou.html">
+            <input type="hidden" name="_next" value="https://blumis.com.br/trankyou.html">
             <input type="hidden" name="_subject" value="Nova Mensagem Site Blumis!">
             <input type="hidden" name="_captcha" value="true">
             <input type="hidden" name="_autoresponse"
