--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <li><a onclick="closeMenu()" href="#contact">Contato</a></li>
         </ul>
 
-        <a class="button" onclick="closeMenu()" href="https://wa.me/c/5511953579709">Comprar agora</a>
+        <a class="button" onclick="closeMenu()" href="#">Comprar agora</a>
 
         <ul class="social-links">
           <li>
